#
# Copyright (C) 2020-2022 Nikolas Koesling <nikolas@koesling.info>.
# This template is free software. You can redistribute it and/or modify it under the terms of the MIT License.
#

# ---------------------------------------- source files (*.cpp, *.cc, ...) ---------------------------------------------
# ======================================================================================================================
# ---------------------------------------- header files (*.hpp, *.h, ...) ----------------------------------------------
# ======================================================================================================================

file(GLOB target_src
        "*.hpp"
        "*.cpp"
)

target_sources(${Target} PRIVATE ${target_src})

# ---------------------------------------- subdirectories --------------------------------------------------------------
# ======================================================================================================================

add_subdirectory(generated)
